--- a/Finsweet_9/assets/styles/blocks/_header.scss
+++ b/Finsweet_9/assets/styles/blocks/_header.scss
@@ -1,11 +1,10 @@
 @use "../utilites/variables" as *;
-
-
-
-
 .header{
     background-color: $color-tintblue;
     padding: 16px 0;
+    position: fixed;
+    width: 100%;
+    z-index: 5;
     &-nav{
         display: flex;
         justify-content: space-between;
